--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
               </div>
               <div class="contact-item">
                 <i class="fas fa-envelope"></i>
-                <span>support@elitecart.com</span>
+                <span>abu.kayser.official.com</span>
               </div>
             </div>
           </div>
@@ -635,7 +635,7 @@
         <div class="footer-bottom">
           <div class="row align-items-center">
             <div class="col-md-6">
-              <p>&copy; 2024 EliteCart. All rights reserved.</p>
+              <p>&copy; 2025 EliteCart. All rights reserved.</p>
             </div>
             <div class="col-md-6 text-md-end">
               <div class="payment-methods">
